Bevel modifier bug #38675

Closed
opened 2014-02-17 12:11:28 +01:00 by Sergei Smyslov · 11 comments

System Information
Linux Xubuntu 13.10, x64, kernel 3.11.0-15-generic
AMD Radeon HD6850 1Gb

Blender Version
Broken: 2.69.10 cc7cfd6
Worked: 2.69.0 r60991

Short description of error
Bevel modifier gives incorrect results (twisted and distorted faces) when applied on a mesh which contains vertices with five (or more) edges connected to it at certain angles.

Exact steps for others to reproduce the error
You can see attached blend file or make your own example:

Add a cube.
Enter to edit mode.
Extrude individually front and side faces according to their normals, so you get a L-shaped mesh block.
Select all three top faces and move them to the front by about 1 unit.
Add bevel modifier to see a bug in the inner corner of a block. Bevel_modifier_bug.blend

**System Information** Linux Xubuntu 13.10, x64, kernel 3.11.0-15-generic AMD Radeon HD6850 1Gb **Blender Version** Broken: 2.69.10 cc7cfd6 Worked: 2.69.0 r60991 **Short description of error** Bevel modifier gives incorrect results (twisted and distorted faces) when applied on a mesh which contains vertices with five (or more) edges connected to it at certain angles. **Exact steps for others to reproduce the error** You can see attached blend file or make your own example: Add a cube. Enter to edit mode. Extrude individually front and side faces according to their normals, so you get a L-shaped mesh block. Select all three top faces and move them to the front by about 1 unit. Add bevel modifier to see a bug in the inner corner of a block. [Bevel_modifier_bug.blend](https://archive.blender.org/developer/F77727/Bevel_modifier_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Luarvik

Added subscriber: @Luarvik
Author

bevel_modifier_bug.jpg

A screenshot of the bug in example file.

![bevel_modifier_bug.jpg](https://archive.blender.org/developer/F77729/bevel_modifier_bug.jpg) A screenshot of the bug in example file.
Howard Trickey was assigned by Sergey Sharybin 2014-02-17 13:07:12 +01:00

Added subscribers: @howardt, @Sergey

Added subscribers: @howardt, @Sergey

@howardt, mind looking into this report?

@howardt, mind looking into this report?
Author

Just as additional info: getting same incorrect results when using bevel tool.

Just as additional info: getting same incorrect results when using bevel tool.
Member

I confirm this behavior, and that it is a bug. Looking at it now. Thanks for the report.

I confirm this behavior, and that it is a bug. Looking at it now. Thanks for the report.
Author

Thank you for your soon reply!
Looking forward for the fix... ;-)

Thank you for your soon reply! Looking forward for the fix... ;-)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Fixed with commit 6de3a8a4fe . Thanks again for the report.

Fixed with commit 6de3a8a4fe . Thanks again for the report.
Author

Thanks a lot!

Thanks a lot!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38675
No description provided.